@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 1.6-2
-Date: 2023-08-17
+Date: 2023-08-18
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Description: A rich hierarchy of sparse and dense matrix classes,
