@@ -81,7 +81,7 @@ setMethod("mean", signature(x = "sparseVector"),
     }
     x@length <- n * each
     x@i <- rep(each * (a(x@i) - one), each = each) + seq_len(each)
-    if(.hasSlot(x, "x"))
+    if(.V.kind(x) != "n")
         x@x <- rep(x@x, each = each)
     x
 }
@@ -114,7 +114,7 @@ setMethod("mean", signature(x = "sparseVector"),
     x@length <- n * times
     x@i <- rep(a(seq.int(from = zero, by = n, length.out = times)),
                each = length(x@i)) + x@i
-    if(.hasSlot(x, "x"))
+    if(.V.kind(x) != "n")
         x@x <- rep.int(x@x, times)
     x
 }
@@ -142,11 +142,11 @@ setMethod("mean", signature(x = "sparseVector"),
     if(length.out < n) {
         head <- x@i <= length.out
         x@i <- x@i[head]
-        if(.hasSlot(x, "x"))
+        if(.V.kind(x) != "n")
             x@x <- x@x[head]
     } else if(length.out > n && n == 0L) {
         x@i <- seq_len(length.out)
-        if(.hasSlot(x, "x"))
+        if(.V.kind(x) != "n")
             x@x <- rep.int(x@x[NA_integer_], length.out)
     }
     x
